# src/controllers/diagnostics.controller.js
@@ -1,14 +1,48 @@
 import Diagnostic from '../models/diagnostic.model';
+import Disease from '../models/disease.model';
+import sequelize from '../db'
 
 export const create = async (req, res) => {
-    const { name } = req.body;
 
     try {
-        await Diagnostic.create({ name });
+
         res.status(201).json({
             message: 'Diagnostic created successfully',
         });
     } catch (error) {
+        res.status(500).json({
+            message: 'Database error',
+        });
+    }
+};
+
+
+export const consult = async (req, res) => {
+    const { symptoms } = req.body
+    try {
+
+        const getAllDiseas = await Disease.findAll({})
+        const diseases = getAllDiseas.map((value) => value.dataValues.name)
+        const queryAll = await sequelize.query('SELECT diag.id as `id`, dise.name as `disease`, sym.name as `symptom` FROM diagnostics as diag inner join diseases as dise on dise.id = diag.diseaseId inner join symptoms as sym on sym.id = diag.symptomId order by diag.diseaseId;')
+        const diseasesDeta = []
+        diseases.forEach((disease) => {
+            const allSymptoms = queryAll[0].filter(diagnostic => (diagnostic.disease === disease))
+            diseasesDeta.push({ disease, symptoms: allSymptoms })
+        })
+
+        let result = []
+        diseasesDeta.forEach(disease => {
+            const idSymptoms = disease.symptoms.map(symptom => symptom.id)
+            const haveDisease = idSymptoms.every(v => symptoms.includes(v));
+            if (haveDisease)
+                result.push(disease)
+        })
+
+        const percent = 100 / result.length
+        result = result.map(value => ({ ...value, percent: `${percent} %` }))
+        res.status(201).json(result);
+    } catch (error) {
+        console.log('error => ', error)
         res.status(500).json({
             message: 'Database error',
         });
@@ -45,19 +79,9 @@ export const getAll = async (req, res) => {
 
 export const updateById = async (req, res) => {
     const { id } = req.params;
-    const { name } = req.body;
 
     try {
-        await Diagnostic.update(
-            {
-                name
-            },
-            {
-                where: {
-                    id,
-                },
-            }
-        );
+
         res.status(200).json({
             message: 'Diagnostic updated successfully',
         });
