# swagger.json
@@ -9,7 +9,7 @@
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         }
     },
-    "schemes": ["https"],
+    "schemes": ["http"],
     "securityDefinitions": {
         "Bearer":{
             "type": "apiKey",
@@ -27,9 +27,10 @@
         {"name": "Districts"},
         {"name": "Establishments"},
         {"name": "Diagnostics"},
-        {"name": "Symptoms"}
+        {"name": "Symptoms"},
+        {"name": "Diseases"}
     ],
-    "host": "predimed-node.herokuapp.com",
+    "host": "localhost:5001",
     "basePath": "/api/v1",
     "paths" : {
         "/auth/login" : {
@@ -222,6 +223,38 @@
                     }
                 }
               }
+            }
+        },
+
+        "/diagnostics/consult" : {
+            "post" : {
+                "tags": ["Diagnostics"],
+                "consumes": ["application/json"],
+                "produces": ["application/json"],
+                "security": [{ "Bearer": [] }],
+                "parameters": [
+                    {
+                        "name": "addDiagnostic",
+                        "in":"body",
+                        "schema": {
+                            "$ref": "#/definitions/diagnosticConsultReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/defaultResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid status value",
+                        "schema": {
+                            "$ref": "#/definitions/InvalidResponse"
+                        }
+                    }
+                }
             }
         },
 
@@ -471,6 +504,139 @@
                   "in": "body",
                   "schema": {
                     "$ref": "#/definitions/symptomReq"
+                  }
+                }
+              ],
+              "responses": {
+                "200": {
+                  "description": "successful operation",
+                  "schema": {
+                    "$ref": "#/definitions/defaultResponse"
+                  }
+                },
+                "400": {
+                    "description": "Invalid status value",
+                    "schema": {
+                        "$ref": "#/definitions/InvalidResponse"
+                    }
+                }
+              }
+            }
+        },
+
+        "/diseases" : {
+            "post" : {
+                "tags": ["Diseases"],
+                "consumes": ["application/json"],
+                "produces": ["application/json"],
+                "security": [{ "Bearer": [] }],
+                "parameters": [
+                    {
+                        "name": "addDisease",
+                        "in":"body",
+                        "schema": {
+                            "$ref": "#/definitions/diseaseReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/defaultResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid status value",
+                        "schema": {
+                            "$ref": "#/definitions/InvalidResponse"
+                        }
+                    }
+                }
+            },
+            "get": {
+                "tags": ["Diseases"],
+                "produces": ["application/json"],
+                "security": [{ "Bearer": [] }],
+                "responses": {
+                  "200": {
+                    "description": "successful operation",
+                    "schema": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/definitions/diseaseRes"
+                        }
+                    }
+                  },
+                  "400": {
+                    "description": "Invalid status value",
+                    "schema": {
+                        "$ref": "#/definitions/InvalidResponse"
+                    }
+                }
+                }
+              }
+        },
+        "/diseases/{id}": {
+            "parameters": [
+              {
+                "name": "id",
+                "in": "path",
+                "required": true,
+                "type": "integer"
+              }
+            ],
+            "delete": {
+              "tags": [
+                "Diseases"
+              ],
+              "security": [{ "Bearer": [] }],
+              "responses": {
+                "200": {
+                  "description": "successful operation",
+                  "schema": {
+                    "$ref": "#/definitions/defaultResponse"
+                  }
+                },
+                "400": {
+                    "description": "Invalid status value",
+                    "schema": {
+                        "$ref": "#/definitions/InvalidResponse"
+                    }
+                }
+              }
+            },
+            "get": {
+                "tags": [
+                  "Diseases"
+                ],
+                "security": [{ "Bearer": [] }],
+                "responses": {
+                  "200": {
+                    "description": "successful operation",
+                    "schema": {
+                      "$ref": "#/definitions/diseaseRes"
+                    }
+                  },
+                  "400": {
+                      "description": "Invalid status value",
+                      "schema": {
+                          "$ref": "#/definitions/InvalidResponse"
+                      }
+                  }
+                }
+              },
+            "put": {
+              "tags": [
+                "Diseases"
+              ],
+              "security": [{ "Bearer": [] }],
+              "parameters": [
+                {
+                  "name": "updateDiagnostic",
+                  "in": "body",
+                  "schema": {
+                    "$ref": "#/definitions/diseaseReq"
                   }
                 }
               ],
@@ -813,6 +979,25 @@
                 "isAdmin":{"type":"boolean"}
             }
         },
+        "diagnosticConsultReq":{
+            "properties": {
+             "symptoms": {
+                 "type":"array", 
+                 "items": { "id": {"type":"integer"}}
+             }
+            }
+        },
+        "diseaseReq":{
+            "type": "object",
+            "properties": {
+             "name": {"type":"string"},
+             "symptoms": {
+                 "type":"array", 
+                 "items": { "id": {"type":"integer"}}
+             }
+            }
+         },
+ 
         "userReq": {
             "type": "object",
             "properties": {
@@ -899,6 +1084,15 @@
                 "name": {"type":"string"}
             }
         },
+        "diseaseRes":{
+            "properties": {
+             "name": {"type":"string"},
+             "symptoms": {
+                 "type":"array",
+                 "items": { "id":{"type":"integer"}}
+             }
+            }
+         },
         "symptomRes": {
             "type": "object",
             "properties": {
